--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,17 +30,11 @@ body{
     color: $accent;
     border-bottom: 2px solid $accent;
 }
-.cover-container{
-    width: 200px;
-    overflow: hidden;
-    cursor: pointer;
-    position: relative;
 
-}
-.cover-title{
-    position: absolute;
-    bottom: 5px;
-}
+// .cover-title{
+//     position: absolute;
+//     bottom: 5px;
+// }
 .main-header{
     @media (min-width:768px) {
         margin-left: max(9%,100px);
